# rnn-predictive-maintenance

./: .gitignore  LICENSE  README.md  pyproject.toml
1. features/: data_engineering.py
2. training/models/: probabilistic_lstm.py  rnn.py
docs/: HOT_PATH_OPTIMIZATION.md
features/: data_engineering.py
