[project]
name = "rnn-predictive-maintenance"
version = "0.1.0"
description = ""
authors = [
    {name = "Augustin Marks de Chabris",email = "augustinlmdc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.15"
dependencies = [
    "numpy (>=2.4.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "scikit-learn (>=1.6.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
